Bug 1276463 - Allow Android native fling animation to correctly handoff velocity r=botond, a=sylvestre